--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
 *  {
-    margin: 0%;
-    padding: 0%;
+    margin:0;
+    padding:0;
 }
 
 html, body {
@@ -8,7 +8,8 @@ html, body {
 }
 
 .brand-logo {
-    margin-left: 2%;
+    margin-left: 1%;
+    margin-top: 0.1%;
 }
 
 .carousel {
@@ -16,7 +17,6 @@ html, body {
 }
 
 .title {
-    color: green;
     font-size: 20px;
 }
 
@@ -26,15 +26,15 @@ html, body {
 }
 
 .footer {
-    position:absolute;
-    bottom:0;
-    align-content: center;
+    bottom: 0%;
+}
+
+.dropdown-itens{
+    background-color: #ffffff;
+    color: #000000;
 }
 
 .conteudo {
     padding-bottom: 30px;
-}
-
-#descricao{
-    background: mediumorchid;
+    background-color: #5cb85c;
 }
